--- a/.config/sway/config
+++ b/.config/sway/config
@@ -31,7 +31,8 @@ set $menu wofi --show drun | xargs swaymsg exec --
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
-output eDP-1 scale 1.4
+output eDP-1 scale 1.3
+output DP-1 scale 1.3
 ### Idle configuration
 #
 # Example configuration:
@@ -111,21 +112,26 @@ output eDP-1 scale 1.4
 #
 # Workspaces:
 #
+    set $ws1 "1:>_"
+    set $ws2 "2:www"
+    set $ws3 "3:emacs"
+
     # Switch to workspace
-    bindsym $mod+1 workspace number 1
-    bindsym $mod+2 workspace number 2
-    bindsym $mod+3 workspace number 3
-    bindsym $mod+4 workspace number 4
+    bindsym $mod+1 workspace $ws1; exec [ $(ps h -C alacritty | wc -l) == 0 ] && alacritty
+    bindsym $mod+2 workspace $ws2; exec [ $(ps -aux | grep 'firefox' | grep -v 'grep' | wc -l) == 0 ] && gtk-lauch firefox-personal
+    bindsym $mod+3 workspace $ws3; exec [ $(ps -aux | grep 'emacs' | grep -v 'grep' | wc -l) == 0 ] && emacs
+    bindsym $mod+4 workspace number 4;
     bindsym $mod+5 workspace number 5
     bindsym $mod+6 workspace number 6
     bindsym $mod+7 workspace number 7
     bindsym $mod+8 workspace number 8
     bindsym $mod+9 workspace number 9
     bindsym $mod+0 workspace number 10
+
     # Move focused container to workspace
-    bindsym $mod+Shift+1 move container to workspace number 1
-    bindsym $mod+Shift+2 move container to workspace number 2
-    bindsym $mod+Shift+3 move container to workspace number 3
+    bindsym $mod+Shift+1 move container to workspace $ws1
+    bindsym $mod+Shift+2 move container to workspace $ws2
+    bindsym $mod+Shift+3 move container to workspace $ws3
     bindsym $mod+Shift+4 move container to workspace number 4
     bindsym $mod+Shift+5 move container to workspace number 5
     bindsym $mod+Shift+6 move container to workspace number 6
@@ -203,10 +209,11 @@ bindsym $mod+r mode "resize"
 # Read `man 5 sway-bar` for more information about this section.
 bar {
     position top
+    strip_workspace_numbers yes
 
     # When the status_command prints a new line to stdout, swaybar updates.
     # The default just shows the current date and time.
-    status_command while date +'%Y-%m-%d %l:%M:%S %p'; do sleep 1; done
+    status_command while ~/.config/sway/status.sh; do sleep 1; done
 
     colors {
         statusline #ffffff
@@ -216,6 +223,32 @@ bar {
 }
 
 for_window [app_id="firefoxdeveloperedition"] border none
+for_window [app_id="emacs"] border none
+for_window [app_id="spotify"] border none
 for_window [app_id="Alacritty"] border none
 
+exec --no-startup-id nm-applet --indicator
+
+bindswitch lid:on output eDP-1 disable
+bindswitch lid:off output eDP-1 enable
+
 include /etc/sway/config.d/*
+
+#bindsym XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
+bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
+bindsym XF86MonBrightnessUp exec brightnessctl set +5%
+
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
+bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
+bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
+bindsym XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
+
+
+
+#Passthrough Mode
+# Find a better solution to deal with emacs
+mode "pass-through" {
+        bindsym $mod+Escape mode "default"
+}
+
+bindsym $mod+Escape mode "pass-through"
